<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stenograph</string>
    <string name="action_settings">Settings</string>
    <string name="database_name">NotesDatabases.db</string>
    <string name="backup_button">BACKUP</string>
    <string name="restore_button">RESTORE</string>
    <string name="plus_button">+</string>
    <string name="hint_password">ENTER PASSWORD...</string>
    <string name="button_password">LOGIN</string>
    <string name="hint_input_text">Jot down here...</string>
    <string name="hint_title">Write your title here...</string>
    <string name="hint_text">Write your note here...</string>
    <string name="action_plus">Add a note</string>
    <string name="action_check_list">Add checklist</string>
    <string name="action_search">Search</string>
    <string name="action_edit_color">Change color of note</string>
    <string name="action_flag">Mark/Unmark note</string>
    <string name="action_remind">Set remind</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate and feedback</string>
    <string name="action_sync">Sync</string>
    <string name="action_about">About</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="demo_text">this is demo text\nasdasdfsdag\nfgjewrtteytry\ncvxzsxbsfdg\ntrherytfsh</string>
    <string name="title_activity_editnote">Edit note</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="remind_set">I will remind you that time.</string>
    <string name="delete_note">Delete this note?</string>
    <string name="delete_note_remind">Remove remind of this note?</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sync">Sync Data</string>
    <string name="title_activity_about">About</string>
    <string name="rate_text">Rate this app!</string>

    <string name="share_text">Hey, get a stylist note app here:\n
        https://play.google.com/store/apps/details?id=com.RStudio.notii_pro</string>
    <string name="market_rate">market://details?id=com.RStudio.notii_pro</string>
    <string name="check_text_hint">New item...</string>

    <string name="about_string">Stenograph 2.2.0\n\n
            .R Studio\n\n
            This is my first app on android\n
            I just made this app for fun and\n
            test my coding skill.\n\n
            Hope you like this app, cheer.</string>

    <string name="sync_help_string">You can backup your notes\n
                on Cloud (Drive). You will need\n
                internet access to use this function.\n\n
                You will lose all current notes. So be careful</string>
    <string name="wrong_time_pick">Wrong time picked, sir :(</string>
    <string name="will_remind_text">Will remind at</string>
    <string name="edit_text_note">Edited</string>
    <string name="create_text_note">Created</string>
    <string name="remind_text_note">Will remind at</string>
    <string name="reminded_text_note">Reminded at</string>
    <string name="will_remind_text_note">Will remind you</string>
    <string name="will_reminded_text_note">Reminded</string>
</resources>
