<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rstudio.notii_pro.Editnote">
    <item android:id="@+id/editNote_color" android:title="@string/action_edit_color"
        android:orderInCategory="100" app:showAsAction="always" android:icon="@drawable/action_color" />
    <item android:id="@+id/editNote_flag" android:title="@string/action_flag"
        android:orderInCategory="200" app:showAsAction="always" android:icon="@drawable/action_flag" />
    <item android:id="@+id/editNote_remind" android:title="@string/action_remind"
        android:orderInCategory="300" app:showAsAction="always" android:icon="@drawable/action_remind" />
    <item android:id="@+id/editNote_delete" android:title="@string/action_delete"
        android:orderInCategory="400" app:showAsAction="always" android:icon="@drawable/action_delete" />
</menu>
